# collage

./: meson.build
data/: icons.gresource.xml  meson.build  resources.gresource.xml  styles.gresource.xml
data/resources/: layouts.json
data/styles/: application.css
gegl-helper/: gegl-helper.c  gegl-helper.h  meson.build
src/: Application.vala  GeglGTKViewHelper.vala  MainWindow.vala  meson.build
src/Helpers/: GeglGTKViewHelper.vala  LayoutHelper.vala
src/Widgets/: GeglGTKView.vala  PictureDropArea.vala  PictureDropSidebar.vala  SidebarTab.vala  SidebarTabContainer.vala
vapi/: gegl-0.3.vapi  gegl-helper.vapi
