icons_gresource = gnome.compile_resources('gresource_icons', 'icons.gresource.xml', source_dir: 'icons')
styles_gresource = gnome.compile_resources('gresource_styles', 'styles.gresource.xml', source_dir: 'styles')
resources_gresource = gnome.compile_resources('gresource_resources', 'resources.gresource.xml', source_dir: 'resources')
